feat: 修改自动化文件

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
+<!--
+ * @Author: wangrui
+ * @Date: 2022-04-29 15:18:09
+ * @LastEditors: wangrui
+ * @Description: 
+ * @LastEditTime: 2022-04-29 15:58:25
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>我的react + vite</title>
   </head>
   <body>
     <div id="root"></div>
